# qix

./: CMakeLists-Catch.txt  CMakeLists.txt  README.md
qix/: CMakeLists.txt
qix/src/: qix.cpp
qix/src/game/: assets.h  constants.h  events.h  objects.h  playfield.cpp  playfield.h
qix/src/utility/: color.h  texture.h
